@@ -1,3 +1,8 @@
+Wed Aug 08 13:21:41 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* secore/searchconnection.py: Fix issue with new match estimate
+	  rounding when match estimate is 0.
+
 Wed Aug 08 03:17:37 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* secore/searchconnection.py: Improve documentation comment.
